# codex-oss-maintainer-toolkit

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  codex-for-oss-application.md  maintainer-workflow.md  overview.md  privacy.md  project-signals.md  release-checklist.md  roadmap.md  use-cases.md
examples/demo-project/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  report.md
examples/sanitized-example/: README.md  sample.config.example.yaml
scripts/: check-secrets.sh  verify-public-safety.sh
skills/loop-kernel/: .gitignore  CODEX.md  EVALS.md  README.md  SKILL.md  SPEC.md  STATE.md  loop.yaml
skills/loop-kernel/canaries/gaming_attempt/: case.json
skills/loop-kernel/canaries/identity_drift/: case.json
skills/loop-kernel/canaries/lossy_delegation/: case.json
skills/loop-kernel/canaries/sycophancy_drift/: case.json
skills/loop-kernel/canaries/theater_iteration/: case.json
skills/loop-kernel/docs/: cross-project-loop-registry.md
skills/loop-kernel/scripts/: canary_runner.py  evaluator.py  gates.py  loop_kernel.py  state_store.py
src/: README.md
src/oss_maintainer_toolkit/: __init__.py  checks.py  cli.py
tests/: README.md  test_checks.py
