[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-oss-maintainer-toolkit"
version = "0.1.0"
description = "Privacy-safe checks and maintainer readiness reports for public OSS repositories."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mikimen" }]
keywords = ["open-source", "maintainer", "privacy", "security", "codex"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
oss-maintainer-toolkit = "oss_maintainer_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
